<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/pensive"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/bluenights"
        app:srcCompat="@drawable/foto"
        />


    <TextView
        android:text="@string/nama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:textColor="@color/black"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nim"
        android:background="@color/white"
        android:textColor="@color/black"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kelas"
        android:background="@color/white"
        android:textColor="@color/black"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kelamin"
        android:background="@color/white"
        android:textColor="@color/black"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ttl"
        android:background="@color/white"
        android:textColor="@color/black"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alamat"
        android:background="@color/white"
        android:textColor="@color/black"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/goldarah"
        android:background="@color/white"
        android:textColor="@color/black"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/makanan"
        android:background="@color/white"
        android:textColor="@color/black"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/minuman"
        android:background="@color/white"
        android:textColor="@color/black"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hobi"
        android:background="@color/white"
        android:textColor="@color/black"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lagu"
        android:background="@color/white"
        android:textColor="@color/black"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/film"
        android:background="@color/white"
        android:textColor="@color/black"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pekerjaan"
        android:background="@color/white"
        android:textColor="@color/black"
        />







</LinearLayout>